[CORRECTION] Corrige certains éléments d’alignements dans le diagnostic

--- a/mon-aide-cyber-ui/src/assets/styles/_commun.scss
+++ b/mon-aide-cyber-ui/src/assets/styles/_commun.scss
@@ -5,7 +5,7 @@
     background-color: var(--couleurs-mac-blanc);
     border-radius: 0.5rem;
     padding: 1.5rem 1rem;
-    //margin: 5.5rem 0;
+    margin: 5.5rem 0;
   }
 }
 
@@ -14,7 +14,7 @@
     background-color: var(--couleurs-mac-blanc);
     border-radius: 1rem;
     padding: 3.5rem 6.375rem !important;
-    //margin: 5.5rem 0;
+    margin: 5.5rem 0;
   }
 }
 
